adds robustness implementation and updates tests based on that